fixup!: sqlite pt 1
Signed-off-by: Sam Gammon <sam@elide.dev>